# GGR

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  VALIDATION.md  pyproject.toml
.claude/: settings.local.json
data/: README.md
notebooks/: 01_quick_start.md
src/ggr/: __init__.py  grid.py  kriging.py  search.py  variogram.py
tests/: __init__.py  conftest.py  test_api.py  test_edge_cases.py  test_gslib_validation.py
